@startuml betabase_erd

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

hide methods
hide stereotypes

entity "APPLICATION" as application {
  primary_key(id: integer)
  --
  name: varchar
  primary_color: varchar
}

entity "CASES" as cases {
  id: integer
  --
  app_under_test: varchar
  name: varchar
  script: varchar
  expected_result: varchar
  tags: varchar
  created_by: varchar
  created_at: varchar
  updated_by: varchar
  updated_at: varchar
  preconditions: varchar
}

entity "DEPLOYMENT" as deployment {
  primary_key(id: integer)
  --
  build: varchar
  branch: varchar
  app_under_test: varchar
  deployed_at: varchar
  record_inserted_at: varchar
}

entity "ROUND" as round {
  primary_key(id: integer)
  --
  name: varchar
  starts_at: varchar
  ends_at: varchar
  updated_at: varchar
  release_num: varchar
  app: varchar
  notes: text
  created_at: varchar
  client_notes: text
  current_flag: smallint
  release_date: varchar
}

entity "SCENARIO" as scenario {
  primary_key(id: integer)
  --
  name: varchar
  script: text
  expected_result: text
  created_by: varchar
  updated_by: varchar
  preconditions: text
  created_at: varchar
  updated_at: varchar
  review_flag: smallint
  flag_reason: text
  app_under_test: varchar
  tags: varchar
  coverage: varchar
  client_priority: smallint
  mode: varchar
  is_security: smallint
  priority_sort_order: integer
  enhancement_sort_order: integer
  current_regression_sort_order: integer
  reviewed_flag: varchar
}

entity "TEST" as test {
  primary_key(id: integer)
  --
  foreign_key(scenario_id: integer)
  created_at: varchar
  comments: text
  ticket: varchar
  created_by: varchar
  input: text
  result: text
  pass_fail: varchar
  build: varchar
  updated_at: varchar
  updated_by: varchar
  path: varchar
  browser_name: varchar
  browser_major: varchar
  browser_minor: varchar
  os_name: varchar
  os_major: varchar
  os_minor: varchar
  deployment_stamp: varchar
  in_prod: varchar
}

entity "USER" as user {
  primary_key(id: integer)
  --
  username: varchar
  username_canonical: varchar
  email: varchar
  email_canonical: varchar
  enabled: smallint
  salt: varchar
  password: varchar
  last_login: varchar
  locked: smallint
  expired: smallint
  expires_at: varchar
  confirmation_token: varchar
  password_requested_at: varchar
  roles: text
  credentials_expired: smallint
  credentials_expire_at: varchar
  created_at: varchar
  updated_at: varchar
  f_name: varchar
  l_name: varchar
  jira_username: varchar
  is_notified: smallint
  mobile_phone: varchar
  org: varchar
}

entity "VARIATION" as variation {
  primary_key(id: integer)
  --
  foreign_key(scenario_id: text)
  variation_text: text
  created_by: varchar
  updated_by: varchar
  created_at: varchar
  updated_at: varchar
}

scenario ||--o{ test : "has"
scenario ||--o{ variation : "has variations"

@enduml
